force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Lead/fields/ExternalID_Lead__c.field-meta.xml
<CustomField>
    <fullName>ExternalID_Lead__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID_Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>