force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Lead/fields/FD_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FD_ExternalId__c</fullName>
    <displayFormat>FD-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>FD_ExternalId</label>
    <type>AutoNumber</type>
</CustomField>