force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Lead/fields/FD_UCID__c.field-meta.xml
<CustomField>
    <fullName>FD_UCID__c</fullName>
    <description>FD&apos;s unique Identification for a given person&apos;s record in their source data</description>
    <label>FD UCID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>