force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Lead/fields/secondary_email__c.field-meta.xml
<CustomField>
    <fullName>secondary_email__c</fullName>
    <description>secondary email</description>
    <label>secondary email</label>
    <type>Email</type>
</CustomField>